--- a/app/index.html
+++ b/app/index.html
@@ -5,17 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">       
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css" />      
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css" />      
     <link rel="stylesheet" href="css/main.css" />
-    <script src="../node_modules/angular/angular.js"></script>  
+
+    <script src="/node_modules/angular/angular.js"></script>  
+    <script src="/node_modules/angular-resource/angular-resource.js"></script> 
+    <script src="app.module.js" type="text/javascript"></script>
     <script src="shopping-list/shopping-list.module.js"></script> 
     <script src="shopping-list/shopping-list.component.js"></script> 
-    <script src="./node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>  
-    <script src="app.module.js" type="text/javascript"></script>
+    <script src="cart/cart.module.js"></script> 
+    <script src="cart/cart.component.js"></script> 
+    <script src="rest.service.js"></script> 
+    <script src="data.factory.js"></script>
+    <script src="/node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>  
 </head>
 <body>
-   <div class="container">     
-        <shopping-list></shopping-list>
+   <div class="container"> 
+        <div class="col-xs-7 col-sm-7">    
+            <shopping-list></shopping-list>
+        </div>
+        <div class="col-xs-5 col-sm-5">  
+            Twoj koszyk  
+            <cart></cart>
+        </div>
     </div>
 </body>
 </html>
