--- a/app/index.html
+++ b/app/index.html
@@ -22,10 +22,11 @@
 <body>
    <div class="container"> 
         <div class="col-xs-7 col-sm-7">    
+            <h3>Dodaj telefon do dzwonienia</h3>
             <shopping-list></shopping-list>
         </div>
         <div class="col-xs-5 col-sm-5">  
-            Twoj koszyk  
+            <h3>Tu są twoje dodane telefony</h3>
             <cart></cart>
         </div>
     </div>
